# go-board-mono

./: .gitignore
firmware/go_board_firmware_std/: Cargo.toml  README.md  build.rs  clippy.toml  diagram.json  partitions.csv  sdkconfig.defaults  wokwi.toml
firmware/go_board_firmware_std/src/: encoder.rs  https.rs  main.rs  restart_recovery.rs  setup.rs  storage.rs  wifi.rs
firmware/go_board_firmware_std/src/neopixel/: go_board.rs  led_ctrl.rs  led_font.rs  led_strip.rs  mod.rs  neo.rs  rgb.rs  strip.rs
firmware/go_board_firmware_std/src/onlinego/: api.rs  auth_token.rs  https.rs  mod.rs  status_codes.rs  websocket.rs
firmware/go_board_firmware_std/src/server/: captive_portal.rs  dns.rs  mod.rs  runner.rs
firmware/go_board_firmware_std/src/server/web/: index.html  test.html
firmware/go_board_firmware_std/src/server/web/assets/: index-CdBTuBfJ.js  index-DrAcb8O5.js  index-hTJyu8WO.css
firmware/go_board_firmware_std/src/settings/: mod.rs  runner.rs
firmware/go_board_firmware_std/src/settings/server/: deserialize_json_req.rs  handlers.rs  mod.rs  server.rs
firmware/go_board_firmware_std/src/settings/server/web/: index.html
firmware/go_board_firmware_std/src/settings/server/web/assets/: index-BhptfRq0.js  index.css  index.js
firmware/settings-panel/: copy_build.sh  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
firmware/settings-panel/src/: app.tsx  index.css
firmware/settings-panel/src/components/custom/: Combobox.tsx  GameInfoCard.tsx  GoOnlineCredentialsCard.tsx  PasswordInput.tsx  SettingsCard.tsx  WifiCredentialsCard.tsx
firmware/settings-panel/src/components/ui/: alert-dialog.tsx  button.tsx  checkbox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  label.tsx  popover.tsx  sheet.tsx
firmware/settings-panel/src/lib/: utils.ts
