[package]
name = "go_board_firmware_std"
version = "0.1.0"
authors = ["cadenkeese <caden@keese.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "go_board_firmware_std"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
anyhow = "1.0.86"
tokio = { version = "1.39.2", features = ["rt", "net", "io-util", "time", "sync", "parking_lot"] }
reqwless = { version = "0.12.1", default-features = false, features = ["log"] }
embedded-svc = "0.28.0"
lazy_static = "1.5.0"
esp-idf-hal = { version = "0.44.1", features = ["alloc", "pio"] }


[build-dependencies]
embuild = "0.32.0"
dotenvy = "0.15.7"
